task1/app2/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs-app2
  namespace: bs-apps
spec:
  
  selector:
    matchLabels:
      app: bs-app2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bs-app2
    spec:
      tolerations:
      - key: "app-name"
        operator: "Equal"
        value: "bs-app2"
        effect: "NoSchedule"
      containers:
      - name: bs-app2
        image: mashnoor/bs-app2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /app/.env
          name: bs-app2-env
          subPath: env
        resources:
          requests:
            cpu: "1m"
            memory: "500Mi"
          limits:
            cpu: "500m"
            memory: "1024Mi"
      volumes:
        - name: bs-app2-env
          configMap:
            name: bs-app2
