task1/app2/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bs-app2
  namespace: bs-apps
  labels:
    app: bs-app2
spec:
  type: ClusterIP
  selector:
    app: bs-app2
  ports:
    - port: 80
      targetPort: 8080
